API User finished v1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=adaPostgreSqlClass
 ##CONFIGURATION DB POSTGRESQL
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/<su_base_de_datos>
+spring.datasource.url=jdbc:postgresql://localhost:5432/pruebaPSC1
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=JimHar2020*
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
